--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,31 @@
 @import url("normal.css");
 
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+* {
+  margin-top: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+}
+
+body {
+  font-family: "font", sans-serif;
+}
+
 .main-content {
   display: flex;
   flex-direction: column;
@@ -14,26 +40,16 @@ img.logo-skillbox {
   margin-bottom: 50px;
 }
 
-.page-links {
+.page-list {
   margin-bottom: 50px;
-  display: inline-block;
 }
 
-.page-links__modules {
-  display: inline-block;
-  padding: 24px 49px 24px 49px;
-}
-
-.page-links__indents {
+.page-links {
   display: inline-block;
   padding: 24px 49px 24px 49px;
 }
 
-a:last-child {
-  margin-right: 0;
-}
-
-a:not(:last-child) {
+.page-links:not(:last-child) {
   margin-right: 25px;
 }
 
@@ -43,28 +59,21 @@ a:not(:last-child) {
   width: 1170px;
 }
 
-h1,
-h2,
-h3,
-p {
-  margin-top: 0;
-}
-
-h1 {
+.title {
   margin-bottom: 40px;
 }
 
-h2,
-h3 {
+.subtitlel2,
+.subtitlel3 {
   margin-bottom: 10px;
 }
-p {
+.article-paragraph,
+.content__paragraph {
   margin-bottom: 40px;
   width: 872px;
 }
 
 .content {
-  display: inline-block;
   border-radius: 20px;
   padding: 30px;
   background-color: #f3f3f3;
@@ -74,35 +83,33 @@ p {
   margin-bottom: 40px;
 }
 
-.content p {
+.content__paragraph {
   margin-bottom: 10px;
   width: 692px;
 }
 
-ul {
+.content__list {
   padding-left: 15px;
 }
 
-li:not(:last-child) {
+.content__item:not(:last-child) {
   padding-bottom: 20px;
 }
 
-img {
+.article-image {
   margin-bottom: 40px;
 }
 
-figure {
+.card {
+  margin: 0;
+}
+
+.card {
   display: inline-block;
   margin-bottom: 40px;
   width: 872px;
 }
 
-figure img {
-  margin-bottom: 0px;
-}
-
 .content:last-child {
-  border-bottom-right-radius: 0px;
-  border-bottom-left-radius: 0px;
   padding-bottom: 0;
 }
