--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,7 @@ img.logo-skillbox {
 .subtitlel3 {
   margin-bottom: 10px;
 }
-.article-paragraph,
-.content__paragraph {
+.article-paragraph {
   margin-bottom: 40px;
   width: 872px;
 }
